tests/integration/snapshots/integration__conformance__n_object_key_with_single_quotes.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{key: 'value'}
stderr ---
error: unexpected character `k`. expected start of a json value
 --> stdin:1:2
  |
1 | {key: 'value'}
  |  ^
